# slides

./: README.md  pyproject.toml
binder/: environment.yml  postBuild
slides/Bayes-overlap/: Bayes-optimal_estimation_of_overlap_between_populations_of_fixed_size.ipynb
tests/: test_slides.py
