[tool.poetry]
name = "jvivian-slides"
version = "0.1.0"
description = ""
authors = ["jvivian"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1"
RISE = "^5.6"
numpy = "^1.17"
pandas = "^0.25.3"
seaborn = "^0.9.0"
scipy = "^1.4"
palettable = "^3.3"
ipython = "^7.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
